--- a/JSintro.html
+++ b/JSintro.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script src="JS.js"></script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="CVgrid.css">
+    <script src="JSintro.js"> </script>
 </head>
 <body>
-    <div id="container">
-    <div id="item1">item1 </div>
-    <div id="item2">item2</div>
-    <div id="item3">item3</div>
-    <div id="item4">item4</div>
+<div id="demo">
+Hello World!
+</div>
+<p id="demo2"></p>
+<script>
+    document.getElementById("demo2").innerHTML=5+6;
+</script>
+<button onclick="Click()">Click</button>
 
-    </div>
 </body>
 </html>
